--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap');
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #12151c;
+  font-family: 'Roboto Condensed', sans-serif;
   color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  background-color: #661b1c;
+  padding: 0.7rem 0.9rem;
+  border-radius: 10px;
+  color: white;
+  text-decoration: none;
+}
+.btn:hover{
+  background-color: #531516;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+::-webkit-scrollbar{
+  display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
