--- a/src/components/add.css
+++ b/src/components/add.css
@@ -9,14 +9,25 @@
 
 .input-wrapper input{
     padding: 20px;
-    background-color: #1b222c;
+    background-color: var(--color-bg-secondary);
     border: 0.5px solid black;
     border-radius: 40px;
-    width: 50vw;
+    width: calc(50% + 25px);
     color: white;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .results{
     list-style-type: none;
+}
+.add-content{
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width:1024px)
+{
+    .input-wrapper input{
+        width: 75%;
+    }
 }
