--- a/src/components/moviecontrol.css
+++ b/src/components/moviecontrol.css
@@ -1,20 +1,20 @@
 .ctrl-btn{
     border: none;
     background-color: rgba(0,0,0, 0.5);
-    color: white;
+    color: var(--primary-color);
     font-size: 1.1rem;
     padding: 5px;
     display: inline;
+    top: 0;
     /* z-index: 2; */
 }
 .ctrl-btn:hover{
-    color: chartreuse;
+    color: var(--secondary-color);
     transition: 0.4s ease-in-out;
 }
-.overlay{
-    background-color: rgba(0,0,0,0.4);
+.toasty{
+    z-index: 4;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
 }
+
+
