--- a/src/components/resultcard.css
+++ b/src/components/resultcard.css
@@ -1,19 +1,22 @@
 .result-card{
-    width: 55rem;
-    margin: 20px auto ;
+    margin: 20px auto;
     display: flex;  
-
+    width: 50%;
 }
 .poster-wrapper
 {
     position: relative;
-    display: flex;
 }
-.header{
-    margin: 20px;
+.header1{
+    margin: 15px 20px;
 }
+
 .date{
     color: grey;
+}
+.ctrlbtns{
+    position: relative;
+    display: flex;
 }
 
 .filler{
@@ -23,20 +26,45 @@
     margin-top: 6rem;
     position: relative;
     border: none;
-    padding: 20px;
-    font-size: 20px;
+    font-size: 1rem;
     margin-left: 10px;
 }
+
 .off{
-    background-color: #531516;
+    background-color: var(--color-btn-sec);
     margin-top: 6rem;
     position: relative;
     border: none;
-    padding: 20px;
-    font-size: 20px;
+    font-size: 1rem;
     margin-left: 10px;
 }
 .off:hover{
-    background-color: #531516;
     cursor: default;
+}
+
+@media only screen and (max-width: 678px)
+{
+    .result-card{
+        margin: 20px calc(30% - 23px);
+        font-size: 10px;
+    }
+    .poster-wrapper img{
+        width: 100px;
+        height: 150px;
+    }
+    .add{
+        margin-top: 0.5rem;
+        font-size: 0.7rem;
+        padding: 0.5rem;
+    }
+    .off{
+        margin-top: 0.5rem;
+        font-size: 0.7rem;
+        padding: 0.5rem;
+    }
+    .ctrlbtns{
+        flex-direction: column;
+        gap: 0.1rem;
+        width: 100px;
+    }
 }
