--- a/src/components/watchlist.css
+++ b/src/components/watchlist.css
@@ -1,25 +1,41 @@
 .top-container{
-    margin: 20px 40px;
+    margin: 20px 30px;
     text-align: center;
     justify-content: center;
     align-items: center;
-    position: relative;
-}
-.heading{
-    text-align: center;
 }
 .cards{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 4rem 7rem;
-    position: absolute;
     padding: 20px;
+}
+.card-container{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
 }
 .no{
     position: fixed;
     top: 50%;
     left: 50%;
-    color: white;
+    color: var(--primary-color);
     opacity: 40%;
     transform: translate(-50%,0);
+    justify-content: center;
+    align-items: center;
 }
+@media only screen and (max-width:1024px)
+{
+    .cards{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media only screen and (max-width:600px)
+{
+    .cards{
+        grid-template-columns: 1fr;
+    }
+}
+
